--- a/services.html
+++ b/services.html
@@ -146,17 +146,15 @@
                data-title="Studio meublé – Cergy Saint-Christophe"
                data-localisation="Île-de-France, Cergy Saint-Christophe (95800)"
                data-description="🏡 Studio rénové et meublé de 17 m², idéal étudiant ou jeune actif.
-
+            <br>
             <br>🔑 Composition :
             <br>Salle d’eau (douche, lavabo, WC)
             <br>Pièce principale avec coin cuisine équipé
             <br>Chauffage électrique, double vitrage
-            
+            <br>
             <br>🚇 Localisation :
-            <br>10 min à pied du RER A – Cergy Saint-Christophe et train L (Paris Saint-Lazare)
-            <br>Commerces à proximité immédiate
-            <br>Accès direct à la base de loisirs de Cergy
-            
+            <br> – 10 min à pied du RER A et train L 
+            <br> – Accès direct à la base de loisirs de Cergy
             <br>💶 Loyer : 600 €/mois (530 € + 70 € charges forfaitaires)
             <br>🔐 Dépôt de garantie : 530 €
             <br>📄 Garantie Visale obligatoire"
@@ -181,7 +179,21 @@
                data-image="logement-palaiseau.jpeg"
                data-title="Chambre en sous-location – Palaiseau"
                data-localisation="Palaiseau (91120)"
-               data-description="🏠 Chambre à sous-louer dans logement familial.<br>💶 300 €/mois toutes charges comprises.<br>❌ Non éligible APL.<br>⚡ Sans caution."
+               data-description="🏠 Chambre étudiante meublée de 17 m² + mezzanine de 7 m², située dans une maison familiale avec jardin (quartier St Paul).
+            <br>
+            <br>✨ Caractéristiques :
+            <br>	•	Meublé : lit 140 cm, canapé, bureau, chaise, rangement, lampe de bureau
+            <br>	•	Salle de bain + WC privatifs
+            <br>	•	Linge de lit et de toilette fourni
+            <br>	•	Accès à la buanderie et à la cuisine
+            <br>	•	Wifi fibre inclus 📶
+            <br>	•	Stationnement gratuit devant la maison 🚗
+            <br>	•	Présence d’1 enfant et de 2 chats 🐱
+            <br>
+            <br>🚍 Proximité : lignes de bus 1, 3, 6 et 21, commerces et écoles.
+            <br>💶 Loyer : 450 € / mois
+            <br>💤 Possibilité de location à la nuitée (tarif selon durée, à négocier)
+            <br>⚡ Offre réservée en priorité à une étudiante, de préférence en alternance."
                data-contact="07 51 28 10 28">
             <img src="logement-palaiseau.jpeg" alt="Palaiseau">
             <h3>Chambre en sous-location – Palaiseau</h3>
@@ -192,7 +204,13 @@
                data-image="logement-savigny.jpeg"
                data-title="Chambre meublée – Savigny-sur-Orge"
                data-localisation="Savigny-sur-Orge (91600)"
-               data-description="Chambre meublée proche RER C.<br>💶 495 €/mois CC."
+               data-description="🏠 Chambre meublée à louer dans un appartement proche gare RER C.
+            <br>
+            <br>Équipements : lit, armoire, table, chaises.
+            <br>Cuisine équipée : plaques de cuisson, micro-ondes, réfrigérateur.
+            <br>💶 Loyer : 495 € CC / mois (445 € + 50 € charges).
+            <br>
+            <br>Pour plus d’informations, veuillez contacter le numéro ci-dessous :"
                data-contact="06 76 87 10 80">
             <img src="logement-savigny.jpeg" alt="Savigny-sur-Orge">
             <h3>Chambre meublée – Savigny-sur-Orge</h3>
@@ -203,7 +221,13 @@
                data-image="logement-marseille.jpeg"
                data-title="Appartement T1 – Marseille"
                data-localisation="Marseille (13015)"
-               data-description="Appartement T1 avec salle de bain et cuisine équipée.<br>💶 450 € CC / mois.<br>📅 Libre immédiatement."
+               data-description="🏠 Appartement T1 composé d’une pièce principale, d’un coin cuisine et d’une petite salle de bain (toilette + douche).
+            <br>
+            <br>💶 Loyer : 450 € CC / mois
+            <br>🔐 Caution demandée – Personne seule, sérieuse et en CDI uniquement.
+            <br>
+            <br>📅 Libre immédiatement
+            <br>"
                data-contact="06 46 82 22 95">
             <img src="logement-marseille.jpeg" alt="Marseille">
             <h3>Appartement T1 – Marseille</h3>
@@ -214,7 +238,19 @@
                data-image="logement-aulnay.jpeg"
                data-title="Dépannage logement étudiant – Aulnay-sous-Bois"
                data-localisation="Aulnay-sous-Bois (93600)"
-               data-description="Solution provisoire étudiante, femme uniquement.<br>💶 650 €/mois.<br>Machine à laver, douche dans pièce, frigo."
+               data-description="🏠 Dépannage logement étudiant (femme uniquement, non-fumeuse)
+            <br>
+            <br>Dans un pavillon familial, une pièce spacieuse est proposée comme chambre provisoire :
+            <br>	•	Matelas 2 places au sol + armoire
+            <br>	•	Douche dans la pièce, WC à l’extérieur
+            <br>	•	Machine à laver en commun
+            <br>	•	Petit frigo, possibilité d’ajouter plaque électrique + micro-ondes
+            <br>
+            <br>📍 Localisation : Quartier pavillonnaire calme, à 15 min à pied du RER B, nombreux transports à proximité.
+            <br>💶 Loyer : 650 € / mois (charges incluses)
+            <br>⚡ Pas de cuisine équipée, solution provisoire de dépannage pour une étudiante dans le besoin.
+            <br>🌸 Contexte : hébergement dans une famille musulmane respectueuse et bienveillante, cadre sécurisé.
+            <br>"
                data-contact="06 14 75 75 77">
             <img src="logement-aulnay.jpeg" alt="Aulnay-sous-Bois">
             <h3>Dépannage logement étudiant – Aulnay-sous-Bois</h3>
@@ -225,7 +261,24 @@
                data-image="logement-melun.jpeg"
                data-title="Studio non meublé – Melun"
                data-localisation="Melun (77000)"
-               data-description="Studio 22 m² refait à neuf.<br>💶 550 € CC / mois.<br>Parking privé, cuisine équipée."
+               data-description="🛏️ Studio – 22 m² – 550 € CC / mois
+            <br>Studio non meublé de 22 m², refait à neuf, situé au 1er étage, au calme et à 10 min à pied de la gare de Melun.
+            <br>Place de parking privative incluse.
+            <br>
+            <br>🔹 Le logement comprend :
+            <br>	•	Séjour lumineux avec placard aménagé
+            <br>	•	Cuisine équipée : plaques 2 feux + rangements
+            <br>	•	Salle de bain avec douche, meuble vasque, WC
+            <br>	•	Installation pour machine à laver
+            <br>	•	Chauffage électrique individuel (non inclus)
+            <br>	•	Eau chaude individuelle
+            <br>
+            <br>💰 Loyer : 550 € charges comprises
+            <br>(40 € de charges : eau froide + copro – régularisation annuelle)
+            <br>🔐 Dépôt de garantie : 1 mois HC
+            <br>📄 Garant exigé si étudiant
+            <br>📧 1er contact par mail – dossier complet demandé
+            <br>"
                data-contact="06 83 52 49 94">
             <img src="logement-melun.jpeg" alt="Melun">
             <h3>Studio non meublé – Melun</h3>
@@ -236,7 +289,22 @@
                data-image="logement-choisy.jpeg"
                data-title="Studio – Choisy-le-Roi"
                data-localisation="Choisy-le-Roi (94600)"
-               data-description="Studio 12 m² refait à neuf.<br>Électricité + eau incluses.<br>💶 590 € CC / mois."
+               data-description="🛏️ Studio – 12 m² – 590 € CC / mois
+            <br>Studio refait à neuf, idéal pour une personne seule, situé dans une zone pavillonnaire calme et sécurisée, proche des RER C et D, du TVM, des commerces et des écoles.
+            <br>
+            <br>🔹 Le logement comprend :
+            <br>	•	Cuisine équipée (plaque chauffante)
+            <br>	•	Salle d’eau avec douche, WC, lavabo et sèche-serviette
+            <br>	•	Électricité + eau incluses dans les charges
+            <br>
+            <br>🚆 Accès rapide :
+            <br>	•	À 2 stations RER de Paris Gare de Lyon
+            <br>	•	Proche Créteil Soleil, Préfecture, Université Paris XII
+            <br>
+            <br>💰 Loyer : 590 € charges comprises
+            <br>(Électricité + eau incluses)
+            <br>📌 Idéal 1 personne sérieuse
+            <br>"
                data-contact="06 52 73 27 32">
             <img src="logement-choisy.jpeg" alt="Choisy-le-Roi">
             <h3>Studio – Choisy-le-Roi</h3>
@@ -247,7 +315,22 @@
                data-image="logement-stgermain.jpeg"
                data-title="Studette meublée – Saint-Germain-en-Laye"
                data-localisation="Saint-Germain-en-Laye (78100)"
-               data-description="Studette meublée 10 m².<br>💶 590 €/mois.<br>Chauffage sol + électricité inclus."
+               data-description="🛏️ Studette meublée – 10 m² – 590 € / mois
+            <br>Charmante studette meublée située rue Molière, dans un immeuble calme et bien entretenu, en plein cœur d’un quartier pratique et recherché.
+            <br>
+            <br>🔹 Localisation idéale :
+            <br>	•	170 m de l’arrêt de bus Jehan Alain
+            <br>	•	400 m du RER A et du tram T13
+            <br>	•	Quartier animé, proche commerces et commodités
+            <br>
+            <br>🔹 Le logement :
+            <br>	•	Studette meublée
+            <br>	•	Toilettes + salle d’eau sur le palier, refaites à neuf
+            <br>	•	Parties communes propres et entretenues
+            <br>	•	Chauffage au sol + électricité inclus dans les charges
+            <br>
+            <br>💰 Loyer : 590 € / mois (dont 40 € de charges)
+            <br>"
                data-contact="07 49 00 66 17">
             <img src="logement-stgermain.jpeg" alt="Saint-Germain-en-Laye">
             <h3>Studette meublée – Saint-Germain-en-Laye</h3>
@@ -258,7 +341,20 @@
                data-image="logement-nanterre.jpeg"
                data-title="Chambre Meublée – Nanterre"
                data-localisation="Nanterre (92000)"
-               data-description="Chambre meublée proche La Défense.<br>575–600 €/mois.<br>Garantie Visale / GarantMe obligatoire."
+               data-description="🛏️ Chambre meublée à louer dans un logement totalement meublé et équipé, <br> idéalement situé près de La Défense. – 575 € / mois
+            <br>➡️ Deux chambres disponibles.
+            <br>
+            <br>🔹 Parties communes :
+            <br>	•	Cuisine entièrement équipée – partagée
+            <br>	•	Salle de bain avec lave-linge – partagée
+            <br>	•	WC – partagé
+            <br>
+            <br>🔹 Conditions :
+            <br>	•	Loyer : 575–600 € / mois (hors électricité)
+            <br>	•	1 mois de loyer + 1 mois de dépôt de garantie
+            <br>	•	Garantie Visale / GarantMe obligatoire (pas de garant physique)
+            <br>	•	APL possible
+            <br>"
                data-contact="07 58 53 02 61">
             <img src="logement-nanterre.jpeg" alt="Nanterre">
             <h3>Chambre Meublée – Nanterre</h3>
@@ -269,7 +365,22 @@
                data-image="logement-toulouse.jpeg"
                data-title="T1 bis – Toulouse"
                data-localisation="Toulouse (31000)"
-               data-description="T1 Bis 31 m², lumineux, balcon plein sud.<br>💶 565 € CC / mois."
+               data-description="🛏️ T1 Bis – 31 m² – 565 € CC / mois
+            <br>Particulier loue un T1 Bis de 31 m², situé Rue de Bayard, au 6ᵉ étage d’une résidence très bien entretenue, sécurisée avec gardien.
+            À 400 m des métros Ligne A Marengo (Gare Matabiau) et Ligne B Jeanne-d’Arc.
+            <br>
+            <br>🔹 Le logement comprend :
+            <br>	•	Entrée avec salle de bains et WC indépendants
+            <br>	•	Pièce à vivre lumineuse avec baie vitrée (double vitrage récent)
+            <br>	•	Balcon exposé plein sud
+            <br>	•	Cuisine ouverte équipée : cuisinière avec four, micro-ondes, frigo, lave-linge, placards
+            <br>	•	Rangements importants (placards)
+            <br>	•	Chauffage individuel gaz
+            <br>	•	Cave privative
+            <br>
+            <br>💰 Loyer : 520 € + 45 € charges (eau incluse – consommation raisonnable)
+            <br>🔐 Dépôt de garantie : 520 €
+            <br>📄 Garanties exigées"
                data-contact="06 26 26 53 63">
             <img src="logement-toulouse.jpeg" alt="Toulouse">
             <h3>T1 bis – Toulouse</h3>
@@ -280,7 +391,20 @@
                data-image="logement-cergy2.jpeg"
                data-title="Chambre meublée standing – Cergy"
                data-localisation="Cergy (95000)"
-               data-description="Colocation haut de gamme, appartement refait à neuf.<br>🛁 2 salles de bain.<br>🌿 Terrasse 40 m².<br>💶 600 €/mois CC."
+               data-description="🏡 Chambre meublée standing – 12 m² – 600 € CC / mois
+            <br>Colocation haut de gamme dans un appartement entièrement refait à neuf, calme et sécurisé.
+            <br>Séjour lumineux avec grand canapé d’angle + écran connecté. Cuisine ouverte totalement équipée.
+            <br>🛁 2 salles de bain modernes avec grandes douches, serviettes fournies.
+            <br>🛏️ 5 chambres décorées, certaines avec bureau et fauteuil. Lits avec parures fournies.
+            <br>🌿 Terrasse de 40 m² aménagée.
+            <br>
+            <br>Électricité, eau, internet inclus.
+            <br>Bail meublé flexible : 1 à 12 mois, renouvelable.
+            <br>Pas de frais d’agence.
+            <br>
+            <br>📅 Disponible immédiatement
+            <br>💰 Loyer : 600 € / mois charges comprises
+            <br>"
                data-contact="06 01 79 89 98">
             <img src="logement-cergy2.jpeg" alt="Cergy">
             <h3>Chambre meublée standing – Cergy</h3>
@@ -291,7 +415,17 @@
                data-image="logement-st-germain.jpeg"
                data-title="Chambre de service – Saint-Germain-en-Laye"
                data-localisation="Saint-Germain-en-Laye (78100)"
-               data-description="Chambre de service 12 m² refaite à neuf.<br>💶 580 € CC."
+               data-description="🏡 Chambre de service – 12 m² – 580 € CC / mois
+            <br>Disponible au rez-de-chaussée d’une résidence verdoyante avec gardien, cette chambre de service entièrement refaite à neuf comprend un coin cuisine équipée.
+            <br>Salle de douche et sanitaires à partager avec 4 autres chambres.
+            <br>
+            <br>📍 Localisation :
+            <br>	•	Résidence calme et arborée
+            <br>	•	Quartier Pontel – Schnapper – Sous-préfecture
+            <br>
+            <br>💰 Loyer : 580 € / mois charges comprises
+            <br>📅 Disponible immédiatement
+            <br>"
                data-contact="06 60 06 91 32">
             <img src="logement-st-germain.jpeg" alt="Saint-Germain-en-Laye">
             <h3>Chambre de service – Saint-Germain-en-Laye</h3>
@@ -444,6 +578,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
